* Add Python package lzstring, h5py
* Add biom format output for taxonomy classification module.
* Fix bug: data clean script in docker or symlink directory
* Fix bug: the fix mapping file Description column
* Update gottcha2 and pangia codes for corresponding database update
* Update megahit from 1.0.3 to 1.1.3.
* Update R from 3.3.2 to 3.5.1
* Update rgi from 3.1.1 to 4.2.2
* Update gottcha dmd complier and use conda to install rapsearch2
* Add MaxBin tools for metagenome contig binning
* Add debug flag in auto_run script
* Add vcf filter options: -I and -r for alternative bases ration and INDEL depth support value
* Add Centrifuge taxonomy classification tool
* Update Kraken to Kraken-2.0.7
* Update Contig taxonomy classification from bwa to minimap2, perl to python
* Add CheckM v1.0.13 tool for assessing the quality of metagenome Binning
* Add AntiSmash v4.1.0 tool for secondary metbolite analysis

EDGE GUI 2.4.0
* Add Ploidy option for Variant calling
* Add anchor link in the result page to quick accession module result
* Add one more line for LibreOffice xlsx format check
* Adjust mobile portrait width for front page
* Fix bug: the reset function disabled show on the registration iframe page.
* Add Binning tag in Assembly and Annotation Module
* Add CheckM switch in Assembly and Annotation Module
* Update Taxonomy tool result display by user select options
* Add extract reads fastq for Kraken result
* Add Secondary Metabolite Analysis Annotation

Database:
GOTTCHA2: update to Refseq90
Kraken2: New db from Refseq (as of Dec 20, 2018)
MiccrDB: New db from Refseq (as of Dec 20, 2018)
CheckM_DB: source https://data.ace.uq.edu.au/public/CheckM_databases/ (2015 Jan)
CARD: update to 3.0.0 

-- Version 20180829
EDGE version 2.3.1
* fix bug: blank SRA accesion variable 
* Add comma separated single reads support for batch submit
* Add script to update existing projects status, runtime, submission time