@@ -9,6 +9,7 @@ EDGE 2.4.0
 * Update megahit from 1.0.3 to 1.1.3.
 * Update R from 3.3.2 to 3.5.1
 * Update rgi from 3.1.1 to 4.2.2
+* Update bedtools from 2.19.1 to 2.27.1
 * Update gottcha dmd complier and use conda to install rapsearch2
 * Add MaxBin tools for metagenome contig binning
 * Add debug flag in auto_run script
